syntax = "proto3";

package authService;

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc LoginOAuth(LoginOAuthRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (StateResponse);
  rpc RefreshTokens(RefreshTokensRequest) returns (AuthResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (StateResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (StateResponse);
  rpc SendVerificationEmail(SendVerificationEmailRequest) returns (StateResponse);
  rpc ReSendVerificationEmail(ReSendVerificationEmailRequest) returns (AuthResponse);
  rpc VerifyEmailWithToken(VerifyEmailRequest) returns (StateResponse);
  rpc VerifyEmailWithOtp(VerifyEmailWithOtpRequest) returns (StateResponse);
  rpc GetProfile(GetProfileRequest) returns (ProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (ProfileResponse);
  rpc DeleteAccount(DeleteAccountRequest) returns (StateResponse);
}

message RegisterRequest {
  string authType = 1;
  string email = 2;
  optional string password = 3;
  optional string username = 4;
  optional string token = 5;  // google token
}

message UserAgent {
  string country = 1;
  string region = 2;
  string timezone = 3;
  string city = 4;
  string ll = 5; // latitude and longitude
  int32 metro = 6;
  int32 area = 7;
  string os = 8;
  optional string browser = 9;
  string deviceType = 10;
  optional string user_ip = 11;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  optional UserAgent useragent = 3;
}

message LoginOAuthRequest {
  string email = 1;
  string authType = 2;
  string token = 3;
}

message LogoutRequest {
  string refreshToken = 1;
}

message RefreshTokensRequest {
  string refreshToken = 1;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ResetPasswordRequest {
  string email = 1;
  string token = 2;
  string newPassword = 3;
}

message SendVerificationEmailRequest {
  optional string token = 1;
  optional string email = 2;
  optional string password = 3;
}

message ReSendVerificationEmailRequest {
  string email = 1;
  string password = 2;
}

message VerifyEmailRequest {
  string token = 1;
  string otp = 2;
}

message VerifyEmailWithOtpRequest {
  string otp = 1;
  string token = 2;
}

message GetProfileRequest {
  string token = 1;
}

message UpdateProfileRequest {
  string token = 1;
  string username = 2;
}

message DeleteAccountRequest {
  string token = 1;
}

message Token {
  string token = 1;
  string expires = 2;
}

message TokenType {
  Token access = 1;
  Token refresh = 2;
}

message AuthResponse {
  ResponseStatus status = 1;
  AuthResult details = 2;
}

message AuthResult {
  string authType = 1;
  string id = 2;
  string email = 3;
  string username = 4;
  TokenType token = 5;
}

message ProfileResponse {
  ResponseStatus status = 1;
  oneof details {
    ProfileResult profileResult = 2;
  }
}

message ProfileResult {
  string authType = 1;
  string email = 2;
  string username = 3;
}

message StateResponse {
  ResponseStatus status = 1;
  oneof details {
    bool result = 2;
  }
}

message ResponseStatus {
  uint64 code = 1;
  string message = 2;
}
